--- a/image-updater/example-app/envs/qa/version.yml
+++ b/image-updater/example-app/envs/qa/version.yml
@@ -8,4 +8,4 @@ spec:
     spec:
       containers:
       - name: webserver-simple
-        image: ghcr.io/marcant-sama/gitops-cert-level-2-examples:1.0
+        image: ghcr.io/marcant-sama/gitops-cert-level-2-examples:rc2
